Uinta editor keybinding

--- a/user/keybindings.conf
+++ b/user/keybindings.conf
@@ -7,3 +7,5 @@
 
 unbind = $mainMod, T
 bind = $mainMod, T, exec, alacritty # launch terminal emulator
+
+bind = $mainMod, U, exec, $HOME/.config/hypr/user/scripts/uinta_dev.sh  # start uinta dev environment
