--- a/user/monitors.conf
+++ b/user/monitors.conf
@@ -5,3 +5,6 @@
 
 # Set your monitor configuration here
 # See https://wiki.hyprland.org/Configuring/Monitors/
+
+monitor = DP-1, 2560x1440@144, 2560x0, 1
+monitor = DP-3, 2560x1440@144, 0x0, 1
